--- a/VIRGENCITADEFATIMA.html
+++ b/VIRGENCITADEFATIMA.html
@@ -6,6 +6,7 @@
     <title>VIRGENCITADEFATIMA</title>
 </head>
 <body>
-Cada 13 de mayo se venera a la VIRGENCITA DE FÁTIMA
+    <h1>VIRGENCITA DE FÁTIMA</h1>
+    <H2>Cada 13 de mayo se VENERA a la VIRGENCITA DE FÁTIMA</H2>
 </body>
 </html>
